@startuml

title __MODEL's Class Diagram__\n

  namespace orchestrator {
    namespace handler {
      namespace legal {
        namespace model {
          class orchestrator.handler.legal.model.LegalHandlerRequest {
              - Flow : String
              + LegalHandlerRequest()
              + equals()
              + getFlow()
              + getService()
              + hashCode()
              + setFlow()
              + setService()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  namespace orchestrator {
    namespace handler {
      namespace legal {
        namespace model {
          class orchestrator.handler.legal.model.LegalHandlerResponse {
              - text : String
              + LegalHandlerResponse()
              + equals()
              + getText()
              + hashCode()
              + setText()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  orchestrator.handler.legal.model.LegalHandlerRequest -up-|> orchestrator.handler.HandlerRequest
  orchestrator.handler.legal.model.LegalHandlerRequest o-- orchestrator.model.Service : Service
  orchestrator.handler.legal.model.LegalHandlerResponse -up-|> orchestrator.handler.HandlerResponse


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
